# GEngine

./: .gitignore  .gitmodules  README.md
Core/: CMakeLists.txt
Core/include/public/: GEngine_EXPORT.h  globals.h  os.h  os_func.h  typedefs.h
Core/include/public/math/: frustum.h  gcam.h  gmat4.h  gquat.h  gtransform.h  gvec3.h  gvec4.h
Core/include/public/platform/: ikeyboard_manager.h  imouse_manager.h  presenter.h  presenter_props.h  virtual_key_codes.h  window.h  window_props.h
Core/include/public/plugin/: c_vec2.h
Core/internal/: strh.h
Core/internal/platform/: keyboard_glfw.h  mouse_glfw.h  window_glfw.h
Core/src/internal/platform/: keyboard_glfw.cpp  mouse_glfw.cpp  window_glfw.cpp
Core/src/public/: gstring.cpp  os_func.cpp  os_str.cpp
Core/src/public/core/: globals.cpp
Core/src/public/platform/: window.cpp
Core/test/: CMakeLists.txt  slotclass.cpp  slotclass.h  smart_ptr_test.cpp
Editor/: CMakeLists.txt
Editor/include/editor/: GEngine_EXPORT.h  editor_application_impl.h  file_type.h  files.h  igimgui_content_descriptor_impl.h  igimgui_menu_impl.h  igimgui_modal_impl.h  igimgui_theme.h  igimgui_window_impl.h  igimgui_window_provider.h  igimgui_window_source_impl.h
Editor/internal/: file_type.h  gimgui_json_theme.h  gimgui_menu.h  gimgui_modal.h  gimgui_window.h  gproject.h  imgui_layer.h  imgui_window_manager.h  utils.h
Editor/internal/manager/: geditor_shader_manager.h  geditor_texture_debug_manager.h  gproject_manager.h
Editor/internal/menu/: gproject_menu.h  gtheme_menu.h  gwindow_menu.h
Editor/internal/modal/: gimgui_function_modal.h
Editor/internal/project/: gproject_info.h  gscript_info.h
Editor/internal/rendering/: gfps_camera_positioner.h  grid_spec.h  renderable.h  vertex_types.h
Editor/internal/rendering/material/: material_assimp_converter.h
Editor/internal/rendering/mesh/: gmesh_assimp_encoder.h
Editor/internal/rendering/scene/: scene_converter.h
Editor/internal/rendering/vulkan/: gcube_pipeline_layout_creator.h  gcube_renderer.h  gdefault_pipeline_injector.h  ggrid_pipeline_layout_creator.h  ggrid_renderer.h  gimgui_descriptor.h  gimgui_descriptor_creator.h  gscene_renderer.h  gvulkan_pipeline_layout_ref.h  gvulkan_pipeline_layout_wrapper.h
Editor/internal/shader/: editor_debuggable_spirv_shader.h  gspirv_byte_shader.h  gspirv_shader_debugger.h  spirv_shader_utils.h
Editor/internal/theme/: gimgui_bright_dark_theme.h  gimgui_default_theme.h  gimgui_theme_1.h  gimgui_theme_2.h
Editor/internal/themes/: gimgui_default_theme.h
Editor/internal/window/: gimgui_albedo_port.h  gimgui_composition_window.h  gimgui_content_browser_window.h  gimgui_file_dialog_window.h  gimgui_grid_settings_window.h  gimgui_log_window.h  gimgui_material_window.h  gimgui_normal_port.h  gimgui_pbr_window.h  gimgui_position_port.h  gimgui_properties_window.h  gimgui_scene_window.h  gimgui_script_window.h  gimgui_sunshadow_window.h  gimgui_texteditor_window.h  gimgui_viewport_window.h
Editor/internal/window/content_helper/: gimgui_content_descriptor.h  gimgui_content_helper.h
Editor/internal/window/provider/: gimgui_script_window_provider.h
Editor/src/editor/: editor_application_impl.cpp  gimgui_json_theme.cpp  gimgui_menu.cpp  gimgui_modal.cpp  gimgui_window.cpp  gproject.cpp  imgui_layer.cpp  imgui_window_manager.cpp  imgui_wrapper.cpp  imguizmo.cpp  utils.cpp
Editor/src/editor/manager/: geditor_shader_manager.cpp  geditor_texture_debug_manager.cpp  gproject_manager.cpp
Editor/src/editor/menu/: gproject_menu.cpp  gtheme_menu.cpp  gwindow_menu.cpp
Editor/src/editor/modal/: gimgui_function_modal.cpp
Editor/src/editor/project/: gproject_info.cpp  gscript_info.cpp
Editor/src/editor/rendering/: gcube_renderer.cpp  gfps_camera_positioner.cpp  renderable.cpp
Editor/src/editor/shader/: editor_debuggable_spirv_shader.cpp  gspirv_byte_shader.cpp  gspirv_shader_debugger.cpp  spirv_shader_utils.cpp
Editor/src/editor/theme/: gimgui_bright_dark_theme.cpp  gimgui_default_theme.cpp  gimgui_theme_1.cpp  gimgui_theme_2.cpp
Editor/src/editor/window/: gimgui_albedo_port.cpp  gimgui_composition_window.cpp  gimgui_content_browser_window.cpp  gimgui_file_dialog_window.cpp  gimgui_grid_settings_window.cpp  gimgui_log_window.cpp  gimgui_material_window.cpp  gimgui_normal_port.cpp  gimgui_pbr_window.cpp  gimgui_position_port.cpp  gimgui_properties_window.cpp  gimgui_scene_window.cpp  gimgui_script_window.cpp  gimgui_sunshadow_window.cpp  gimgui_texteditor_window.cpp  gimgui_viewport_window.cpp
Engine/: CMakeLists.txt  generated_reflect.cpp
Engine/include/: version.h
Engine/include/engine/: GEngine_EXPORT.h  gapplication_impl.h  gengine.h  globals.h  gproject.h  igobject.h  imanager_table.h  iserializable.h  time_unit.h
Engine/include/engine/io/: gimage_descriptor.h  (+4 more)
Engine/internal/engine/: manager_table.h  utils.h
Engine/shaders/: PBR.h  bounding_box.glsl_frag  bounding_box.glsl_vert  composition.glsl_frag  composition.glsl_vert  composition_pbr.glsl_frag  cubemap.glsl_frag  cubemap.glsl_vert  cull.glsl_comp  cull_meshlet.glsl_comp  deferred.glsl_frag  deferred.glsl_vert  deferred_meshlet.glsl_frag  deferred_meshlet.glsl_vert  fxaa.glsl_frag  mesh_def.h  meshlet_def.h  meshlet_task.glsl_mesh  sun_shadow.glsl_frag  sun_shadow.glsl_mesh  sun_shadow.glsl_task  sun_shadow.glsl_vert
Engine/src/engine/: gengine.cpp  globals.cpp  gproject.cpp  manager_table.cpp  utils.cpp
GObject/: CMakeLists.txt
GObject/include/gobject/: GEngine_EXPORT.h  gfunction.h  gfunction_execution_error.h  gfunction_wrapper.h  ginstance.h  gobject.h  gobject_db.h  gobject_defs.h  gobject_utils.h  gproperty.h  gproperty_errors.h  gproperty_wrapper.h  gtype.h  gtype_info.h  gtype_utils.h  gvariant.h
GObject/internal/: gobject_db_data.h
GObject/src/gobject/: gfunction.cpp  gfunction_wrapper.cpp  ginstance.cpp  gobject_db.cpp  gobject_utils.cpp  gproperty.cpp  gproperty_wrapper.cpp  gtype.cpp  gvariant.cpp
GObject/test/: CMakeLists.txt  first.cpp  first.h  object.cpp
Game/: CMakeLists.txt  game.cpp  game.h  main.cpp
Programs/build_script/: CMakeLists.txt
(+352 files in other folders)
